--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Tab 标签页</title>
+		<title>Tab标签页</title>
 	</head>
 	<body>
-		
+	    <div class="tab">
+	        
+	    </div>
+		<script src="js/jquery-1.11.0.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/tab.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
